CORRIGE erreur W3C Validator

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -129,12 +129,8 @@
                             <p class="level-item has-text-centered">
                                 <a href="{{ path('mentions_legales') }}" class="link is-info">Mentions légales</a>
                             </p>
-{#                            <p class="level-item has-text-centered is-size-2">#}
-{#                                <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">#}
-{#                                ASSUM#}
-{#                            </p>#}
                             <div class="level-item has-text-centered">
-                                <img width="50px" src="{{asset('uploads/images_site/logo_assum.png')}}" alt="Logo Assum">
+                                <img width="50" src="{{asset('uploads/images_site/logo_assum.png')}}" alt="Logo Assum">
                             </div>
                             <p class="level-item has-text-centered">
                                 <a href="{{ path('qui_sommes_nous') }}" class="link is-info">Qui sommes nous</a>
