--- a/templates/includes/footer_dernier_article.html.twig
+++ b/templates/includes/footer_dernier_article.html.twig
@@ -2,5 +2,6 @@
     <h2 class="title is-size-6-touch is-size-4-desktop">Dernier article publié</h2>
     <p class="subtitle">{{ dernier_article.titre }}</p>
     <p class="content"> {{ dernier_article.contenu | slice(0, 250) |commonmark('my_custom_converter') }} ...
-        (<a href="{{ path('affichage_article', {id: dernier_article.id} ) }}">Lire la suite</a>)</p>
+        (<a href="{{ path('affichage_article', {id: dernier_article.id} ) }}">Lire la suite</a>)
+    </p>
 </div>
