ENLEVE les adresses mail en dur, MODIFIE article et produit

--- a/templates/home/mentions_legales.html.twig
+++ b/templates/home/mentions_legales.html.twig
@@ -13,7 +13,7 @@
                <ul>
                    <li>Nom et prénom : Bogdan RADOI</li>
                    <li>Adresse de domicile : Ivry sur Seine, 94200 </li>
-                   <li>Numéro de téléphone et adresse de courrier électronique : 07 78 20 46 24, radoi.office@gmail.com</li>
+                   <li>Numéro de téléphone : 07 78 20 46 24</li>
                    <li>Nom du directeur: Bogdan RADOI</li>
                </ul>
             </div>
@@ -41,16 +41,15 @@
 
             <h2 class="title is-size-4 mt-3">L'utilisation de données personnelles</h2>
             <p>
-                L'utilisateur à le droit d'opposition, d'interrogation, d'accès et de rectification de vos données personnelles. Pour cela merci de
-                <a href="{{ path('nous_contacter') }}"> nous contacter</a> <br>
+                L'utilisateur à le droit d'opposition, d'interrogation, d'accès et de rectification de vos données personnelles. <br>
                 Auncun transfert de données à caractère personnel n'est envisagé ou traitement de données.<br>
                 Vous avez le droit d'introduire une réclamation (plainte) auprès de la Cnil si vos droits ne sont pas respectés.
             </p>
             <div class="content">
                 <ul>
-                    <li>Point de contact sur les questions de protection des données personnelles : radoi.office@gmail.com </li>
+                    <li>Point de contact sur les questions de protection des données personnelles : <a href="{{ path('nous_contacter') }}"> nous contacter</a> </li>
                     <li>Finalité poursuivie par le traitement auquel les données sont destinées : création de compte d'utilisateur pour donner son avis </li>
-                    <li>Numéro de téléphone et adresse de courrier électronique</li>
+                    <li>Numéro de téléphone : 07 78  20 46 24</li>
                     <li>Nom du directeur: Bogdan RADOI</li>
                 </ul>
             </div>
