--- a/templates/produit/affichage.html.twig
+++ b/templates/produit/affichage.html.twig
@@ -68,7 +68,7 @@
                         </figure>
                     {% else %}
                         <figure class="is-hidden-mobile">
-                            <img class="image-border-3" width="300" src="https://loremflickr.com/1024/1024/clothes/all?lock={{ produit.id }}" alt="img">
+                            <img class="image-border-3" width="300" src="{{ asset('uploads/images_site/image_non_disponible.PNG') }}" alt="img">
                         </figure>
                     {% endif %}
                 </div>
