MODIFIE taille images, Corrige meta
Meta robots noindex nofollow affiche sur BO (pas sur FO)
Meta description affiche sur FO (avant pas du tout)

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -1,5 +1,10 @@
 {% extends "base.html.twig" %}
 
+{% block meta_description %}
+    {# SEO - ne pas indexer les pages admin #}
+    <meta name="robots" content="noindex, nofollow"/>
+{% endblock %}
+
 {# Convention de préfixer avec underscore les fichiers qui sont des maquettes / qui ne sont pas des pages en soit #}
 {% block body %}
     {#################       NAVBAR      #################}
