--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,7 @@
                     </div>
                     <div class="column is-two-fifths">
                         <figure class="image">
-                            <img class="is-rounded" src="{{ asset('uploads/images_site/solution-epargne-rentable.jpg') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
+                            <img class="is-rounded" src="{{ asset('uploads/images_site/solution-epargne-rentable-small.png') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
                         </figure>
                     </div>
                 </div>
