--- a/templates/article/liste.html.twig
+++ b/templates/article/liste.html.twig
@@ -36,7 +36,7 @@
                     </div>
                     <div class="column is-two-fifths">
                         <figure class="image">
-                            <img class="is-rounded" src="{{ asset('uploads/images_site/épargne-verte-solidaire.jpg') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
+                            <img class="is-rounded" src="{{ asset('uploads/images_site/épargne-verte-solidaire-small.png') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
                         </figure>
                     </div>
                 </div>
