--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -15,7 +15,7 @@
                     </div>
                     <div class="column is-two-fifths">
                         <figure class="image">
-                            <img class="is-rounded" src="{{ asset('uploads/images_site/comparateur-meilleurs-assureurs.jpg') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
+                            <img class="is-rounded" src="{{ asset('uploads/images_site/comparateur-meilleurs-assureurs-small.png') }}" alt="Comparatifs produits assurance-vie | Frais de gestion | Actualités">
                         </figure>
                     </div>
                 </div>
