CORRIGE PETITS BUG + RAJOUTE .ENV au gitignore

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,7 @@ $table-cell-padding       : 0.2em 0;
 $footer-background-color  : #a8b2ea;
 $footer-padding           : 3rem 1.5rem 3rem ;
 $family-sans-serif        : "Segoe UI", Roboto, sans-serif;
+$navbar-item-hover-background-color : $primary;
 @import "~bulma";
 @import "~@creativebulma/bulma-divider";
 
