--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -10,7 +10,7 @@
     {#################       NAVBAR      #################}
     {# sera affiché sur toutes les pages du Front-Office #}
 
-    <nav class="navbar is-light">
+    <nav class="navbar is-light is-fixed-top">
         <div class="container is-widescreen">
             <div class="p navbar-brand mx-0">
                 <a class="navbar-item px-5" href="{{ path('home') }}">
