--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,8 @@
         // Youtube - Exemple
         // (tarteaucitron.job = tarteaucitron.job || []).push('youtube');
     </script>
-
+    {# affiche logo dans le tab du navigateur #}
+    <link rel="icon" href="{{ asset('uploads/images_site/assum_small_label.png') }}">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
